3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

lib/artifacts: Fix type of lockpicks of quality/high quality.
Andreas Kischbaum 2005-07-15

Those commits remove the dependency on the plugin towards the library. All functions
 used from the plugin are hooked, instead of being called directly. This fixes bugs
 under Windows, and simplifies compilation. Also, many new callbacks were defined.
Affected files:
 include/plugin.h plugproto.h sproto.h
 plugin/plugin_python.c
 server/plugins.c
Note that at some point some functions could be moved out of plugin_python and put in
 plugin_general to be shared between different plugins.
Ryo 2005-07-15

Those commits remove the whole "glue/callback" logic. Instead functions are just
defined as external, and should be implemented (even as dummy) by all programs.
Affected files:
 common/arch.c button.c glue.c init.c item.c living.c logger.c los.c map.c object.c
  time.c treasure.c
 crossedit/stubs.c: new file with dummy functions.
 crossedit/Makefile.[in|am]: add this new file.
 include/funcpoint.h libproto.h sproto.h
 random_maps/standalone.c: add dummy functions for those externals.
 server/init.c: remove obsolete setup_library()

Added a wrapper function for check_trigger from plugins.
 include/plugin.h: new function
 server/plugins.c: wrapper for check_trigger.

Ryo 2005-07-15

plugin/plugin_python.c: (add|free)_string should *not* be called directly under Win32.
 Therefore let's use the hooks. Also, when removing an object, better check it's not the
 current object (CFPython.RemoveObject(CFPython.WhoAmI()) anyone?).
Ryo 2005-07-15

server/spell_util.c: use on_same_map instead of checking directly map pointers.
Ryo 2005-07-15
